<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:focusable="true"
        android:clickable="true"
        android:onClick="historyCellTapped">
    <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="22sp"
            android:text="@string/n_title"/>
    <TextView
            android:layout_weight="5"
            android:gravity="center"
            android:id="@+id/result_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="22sp"
            android:text="@string/result_exist"/>
    <LinearLayout
            android:layout_weight="1.5"
            android:gravity="center|end"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent">
        <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/result_see_list"/>
        <TextView
                android:gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:padding="4dp"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/next_text"/>
    </LinearLayout>

</LinearLayout>